--- a/web-projects/test-site/index.html
+++ b/web-projects/test-site/index.html
@@ -12,6 +12,11 @@
   </head>
   <body>
     <h1>Michael Ault's Song Recommendations</h1>
+    <p> My name is Michael Ault and I am a 4th year studying Computer Science and Business 
+        at Northeastern University.  I have a passion for music and discovering 
+        new artists.  Music is a way to not only express yourself, but one of the fastest ways to 
+        understand others.  </p>
+        
     <p> My website will be a hub for all songs I recommended to people.  
         It will include --- </p> 
         <ul>
@@ -24,6 +29,8 @@
   
     <h1> Author Spotlight: Dominic Fike </h1>
     <a href="https://en.wikipedia.org/wiki/Dominic_Fike">About Dominic <a>
+        <button>Change user</button>
+
         <script src="scripts/main.js"></script>
 
     </body>
